# mojido

./: .gitignore  CLAUDE.md  README.md  axogen.ts  components.json  eslint.config.js  package.json  vite.config.js
axogen/scripts/: generate-sentences.ts
axogen/utils/: android-env.ts  tool-detection.ts
docs/ui-ux/: GUIDELINES.md
messages/: en.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: db.ts  utils.ts
src/lib/components/: DayStreakDisplay.svelte  HintToken.svelte  ModeToggle.svelte  PracticeView.svelte  SentenceDisplay.svelte  StartScreen.svelte  StatsView.svelte  StreakCelebration.svelte  StreakCounter.svelte  Titlebar.svelte  TypingDisplay.svelte
src/lib/components/stats/: AccuracyTrend.svelte  FocusAreas.svelte  MasterySection.svelte  ProgressSection.svelte
src/lib/data/: sentences-generated.ts  sentences.ts
src/lib/stores/: platform.svelte.ts  session.svelte.ts
src/lib/utils/: adaptive.ts  romaji.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
