[package]
name = "mojido"
version = "0.1.0"
description = "文字道 - The Way of Characters. A Japanese reading practice app."
authors = ["Oliver Seifert <github.staging362@passmail.net>"]
repository = "https://github.com/ImGajeed76/mojido"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mojido_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-decorum = "1.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

